python/testData/highlighting/unsupportedPositionalOnlyParameters.py
def f(pos1, <error descr="Python version 3.7 does not support positional-only parameters">/</error>, pos_or_kwd, *, kwd1):
    pass